--- a/style.css
+++ b/style.css
@@ -20,8 +20,8 @@ dd {
 }
 
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
-ul[role='list'],
-ol[role='list'] {
+ul[role="list"],
+ol[role="list"] {
   list-style: none;
 }
 
@@ -60,9 +60,9 @@ select {
 /* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
 @media (prefers-reduced-motion: reduce) {
   html:focus-within {
-   scroll-behavior: auto;
+    scroll-behavior: auto;
   }
-  
+
   *,
   *::before,
   *::after {
@@ -73,3 +73,63 @@ select {
   }
 }
 
+:root {
+  --clr-primary-400: hsl(178, 100%, 50%);
+  --clr-primary-500: hsl(215, 51%, 70%);
+
+  --clr-neutral-300: hsl(0, 0%, 100%);
+  --clr-neutral-400: hsl(215, 32%, 27%);
+  --clr-neutral-500: hsl(216, 50%, 16%);
+  --clr-neutral-600: hsl(217, 54%, 11%);
+
+  --fs-400: 18px;
+}
+
+.fs-400 {
+  font-size: var(--fs-400);
+}
+
+.clr-primary-400 {
+  color: var(--clr-primary-400);
+}
+.clr-primary-500 {
+  color: var(--clr-primary-500);
+}
+
+.clr-neutral-300 {
+  color: var(--clr-neutral-300);
+}
+.clr-neutral-400 {
+  color: var(--clr-neutral-400);
+}
+.clr-neutral-500 {
+  color: var(--clr-neutral-500);
+}
+.clr-neutral-600 {
+  color: var(--clr-neutral-600);
+}
+
+.bg-primary-400 {
+  background-color: var(--clr-primary-400);
+}
+.bg-primary-500 {
+  background-color: var(--clr-primary-500);
+}
+
+.bg-neutral-300 {
+  background-color: var(--clr-neutral-300);
+}
+.bg-neutral-400 {
+  background-color: var(--clr-neutral-400);
+}
+.bg-neutral-500 {
+  background-color: var(--clr-neutral-500);
+}
+.bg-neutral-600 {
+  background-color: var(--clr-neutral-600);
+}
+
+a {
+  color: var(--clr-neutral-300);
+  text-decoration: none;
+}
