--- a/style.css
+++ b/style.css
@@ -185,3 +185,9 @@ footer img {
   border: 1px solid var(--clr-neutral-300);
   border-radius: 50%;
 }
+
+@media (min-width: 600px) {
+  main {
+    max-width: 25rem;
+  }
+}
