--- a/style.css
+++ b/style.css
@@ -146,6 +146,11 @@ select {
   border-radius: 15px;
 }
 
+h1 {
+  font-size: 2rem;
+  font-weight: 600;
+}
+
 a {
   color: var(--clr-neutral-300);
   text-decoration: none;
@@ -164,6 +169,7 @@ main {
 .price {
   display: flex;
   justify-content: space-between;
+  font-weight: 600;
 }
 
 .price p {
