--- a/style.css
+++ b/style.css
@@ -166,6 +166,28 @@ main {
   gap: 1rem;
 }
 
+.nft {
+  position: relative;
+  cursor: pointer;
+}
+
+.hover-img {
+  opacity: 0;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  display: grid;
+  place-items: center;
+  background-color: var(--clr-primary-400);
+  transition: 0.3s ease;
+}
+
+.hover-img:hover {
+  opacity: 1;
+  background-color: hsla(178, 100%, 50%, 0.5);
+}
+
 .price {
   display: flex;
   justify-content: space-between;
